--- a/CSS_advanced/styles/3-style.css
+++ b/CSS_advanced/styles/3-style.css
@@ -8,15 +8,15 @@ html {
     color-white: #ffffff;
     color-light-grey: #f3f3f3;
     color-dark-grey: #353535;
-    text-color: color-black;
+    text-color: var(--color-black);
 }
 
 body {
-    color: text-color;
+    color: var(--text-color);
 }
 
 a {
-    color: text-color;
+    color: var(--text-color);
 }
 
 .visually-hidden {
@@ -24,9 +24,9 @@ a {
 }
 
 .card-category {
-    color: color-primary;
+    color: var(--color-primary);
 }
 
 .section-tagline {
-    color: color-primary;
+    color: var(--color-primary);
 }
