--- a/CSS_advanced/styles/3-style.css
+++ b/CSS_advanced/styles/3-style.css
@@ -11,11 +11,7 @@ html {
     text-color: var(--color-black);
 }
 
-body {
-    color: var(--text-color);
-}
-
-a {
+body, a {
     color: var(--text-color);
 }
 
@@ -23,10 +19,6 @@ a {
     display: none;
 }
 
-.card-category {
-    color: var(--color-primary);
-}
-
-.section-tagline {
+.card-category, .section-tagline {
     color: var(--color-primary);
 }
