--- a/CSS_advanced/styles/3-style.css
+++ b/CSS_advanced/styles/3-style.css
@@ -1,32 +1,26 @@
 :root {
-    color-primary: #d73953;
-    color-black: #090909;
-    color-white: #ffffff;
-    color-light-grey: #f3f3f3;
-    color-dark-grey: #353535;
-    text-color: var(--color-black);
+	--color-primary: #d73953;
+	--color-black: #090909;
+	--color-white: #ffffff;
+	--color-light-grey: #f3f3f3;
+	--color-dark-grey: #353535;
+	--text-color: var(--color-black);
 }
-
 html {
-    scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
-
 body {
-    color: var(--text-color);
+	color: var(--text-color);
 }
-
 a {
-    color: var(--text-color);
+	color: var(--text-color);
 }
-
 .visually-hidden {
-    display: none;
+	display: none;
 }
-
-.section-tagline {
-    color: var(--color-primary);
-}
-
 .card-category {
-    color: var(--color-primary);
+	color: var(--color-primary);
+}
+.section-tagline {
+	color: var(--color-primary);
 }
