--- a/CSS_advanced/styles/8-style.css
+++ b/CSS_advanced/styles/8-style.css
@@ -16,7 +16,7 @@
 	--font-weight-bold: 700;
 	--line-height-small: 1.2;
 	--line-height-base: 1.5;
-	--line-height-big: 1.8:
+	--line-height-big: 1.8;
 }
 
 html {
