--- a/CSS_advanced/styles/11-style.css
+++ b/CSS_advanced/styles/11-style.css
@@ -55,7 +55,7 @@ a {
 
 .section-tagline {
     color: var(--color-primary);
-    family-font: var(--font-family-title);
+    font-family: var(--font-family-title);
     text-transform: var(--section-tagline-transform);
     font-weight: var(--font-weight-bold);
 }
