--- a/CSS_advanced/styles/25-style.css
+++ b/CSS_advanced/styles/25-style.css
@@ -37,6 +37,15 @@
 	--nav-item-margin: 0 0 3rem 0;
 	--nav-item-link-hover: var(--color-primary);
 	--section-tagline-margin: 0;
+	--button-display: inline-block;
+	--button-padding: 1.5rem 3rem;
+	--button-border: 0.2rem solid var(--color-primary);
+	--button-color: var(--color-black);
+	--button-text-decoration: none;
+	--button-font-size: var(--font-size-large);
+	--button-hover-color: var(--color-white);
+	--button-hover-text-decoration: none;
+	--button-hover-background: var(--color-primary);
 }
 
 *, *:before, *:after {
